Notifications (#2)
* implement send notification